<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:layout_weight="1"
        android:layout_columnSpan="2"
        android:text="@string/look_at_my_gui"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:layout_weight="1"
        android:text="@string/click_here"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:layout_weight="1"
        android:text="@string/check_this_out"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_weight="1"
        android:gravity="fill"
        app:srcCompat="@drawable/flag"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/switch_on_off"
        android:textOff="Off"
        android:textOn="On"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:gravity="fill"
        android:hint="@string/type_here"
        android:inputType="textPersonName" />
</GridLayout>
